# luaffi

./: .gitignore
luaffi_cmake/: CMakeLists.txt  TODO.md  atomic.c  atomic.h  dym_loader.c  dym_loader.h  ffi.c  ffi2.h  ffi_def.h  ffi_ext.c  ffi_impl.c  h_alloctor.c  h_alloctor.h  h_array.c  h_array.h  h_array_test.c  h_float_bits.h  h_linklist.c  h_linklist.h  h_list.c  h_list.h  h_string.c  h_string.h  hffi.c  hffi.h  hffi_common.c  hffi_common.h  hffi_lua.c  hffi_lua.h  hffi_pri.h  hffi_test.c  hffi_test2.c  hffi_test_struct.c  hffi_test_struct2.cpp  hffi_test_union.c  hffi_test_value.cpp  hlist.c  hlist.h  libffi_study.c  libffi_test.c  (+5 more)
luaffi_cmake/doc/: array.md  types.md
luaffi_cmake/lua-5.3.6/: CMakeLists.txt
luaffi_cmake/lua-5.3.6/src/: loadlib.c
luaffi_cmake/lua_script/: ffmpeg_structs.lua  ints.lua  mobdebug_bak.lua  struct_parser.lua  sys_libs.lua  test_array.lua  test_base.lua  test_dymlib.lua  test_dymlib2.lua  test_ffmpeg.lua  test_ffmpeg_dec.lua  test_libc.lua  test_struct.lua  tests.lua
luaffi_cmake/lua_script/core/: hstring.lua  hstringTest.lua
luaffi_cmake/lua_script/core/util/: Strings.lua  StringsTest.lua  bits.lua  file_reader.lua  strings.lua
luaffi_cmake/lua_script/test_res/: ffmpeg.in  ffmpeg_avcodec.in  ffmpeg_avcodec_ctx.in  ffmpeg_avframe.in  ffmpeg_avpacket.in  ffmpeg_avstream.in  ffmpeg_config.in  struct1.in  struct2.in  struct3.in  struct4.in  struct_function_multi_lines.in  struct_if.in  struct_simple.in  struct_simple2.in
